--- a/week7/oxford_pets_zero_shot.ipynb
+++ b/week7/oxford_pets_zero_shot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -14,8 +14,9 @@
       "Requirement already satisfied: gradio in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (5.21.0)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.6.0)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.10.0)\n",
-      "Collecting seaborn\n",
-      "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: torch in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.6.0)\n",
+      "Requirement already satisfied: Pillow in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (11.0.0)\n",
       "Requirement already satisfied: filelock in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (3.18.0)\n",
       "Requirement already satisfied: huggingface-hub<1.0,>=0.30.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.30.2)\n",
       "Requirement already satisfied: numpy>=1.17 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2.1.3)\n",
@@ -43,7 +44,6 @@
       "Requirement already satisfied: jinja2<4.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (3.1.5)\n",
       "Requirement already satisfied: markupsafe~=2.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (2.1.5)\n",
       "Requirement already satisfied: orjson~=3.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (3.10.15)\n",
-      "Requirement already satisfied: pillow<12.0,>=8.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (11.0.0)\n",
       "Requirement already satisfied: pydantic>=2.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (2.10.6)\n",
       "Requirement already satisfied: pydub in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (0.25.1)\n",
       "Requirement already satisfied: python-multipart>=0.0.18 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gradio) (0.0.20)\n",
@@ -65,6 +65,10 @@
       "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.4.8)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (3.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\thivj\\appdata\\roaming\\python\\python312\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: networkx in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch) (78.1.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
       "Requirement already satisfied: idna>=2.8 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio<5.0,>=3.0->gradio) (3.10)\n",
       "Requirement already satisfied: sniffio>=1.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from anyio<5.0,>=3.0->gradio) (1.3.1)\n",
       "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from aiohttp->datasets) (2.6.1)\n",
@@ -90,16 +94,13 @@
       "Requirement already satisfied: rich>=10.11.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from typer<1.0,>=0.12->gradio) (13.9.4)\n",
       "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich>=10.11.0->typer<1.0,>=0.12->gradio) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\thivj\\appdata\\roaming\\python\\python312\\site-packages (from rich>=10.11.0->typer<1.0,>=0.12->gradio) (2.18.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0,>=0.12->gradio) (0.1.2)\n",
-      "Downloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n"
+      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\thivj\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0,>=0.12->gradio) (0.1.2)\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "!pip install transformers datasets gradio scikit-learn matplotlib seaborn\n"
+    "!pip install transformers datasets gradio scikit-learn matplotlib seaborn torch Pillow\n"
    ]
   },
   {
